# naturalhlp

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.ps1  build.sh  hello_world.cpp  run-dshp  run-dshp.cmd  test.cpp  test_nlmc_function.dshp  test_nlmc_loop.dshp  test_nlmc_simple.dshp  test_nlmc_validation.py
examples/: array_sum.dshp  calculator.dshp  fibonacci.dshp  game.dshp  hello_world.dshp  nlmc_samples.md  test.dshp  todo_app.dshp
src/: compiler.rs  gemini.rs  main.rs
src/nlmc/: ambiguity_resolver.rs  error_recovery.rs  flow_analyzer.rs  hardware_layer.rs  intent_extractor.rs  llvm_generator.rs  mod.rs  semantic_analyzer.rs  syscall_interface.rs  type_inferencer.rs
tests/: nlmc_tests.rs
