[package]
name = "nhlp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Natural High Level Programming Language - A compiler that translates natural language to C++"
license-file = "LICENSE.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.8"
# NLMC dependencies
inkwell = { version = "0.4", features = ["llvm17-0"] }
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
petgraph = "0.6"
dashmap = "5.5"
